--- a/src/server/templates/index.html
+++ b/src/server/templates/index.html
@@ -5,13 +5,14 @@
     <tr><th>What</th><th>How Many</th></tr>
   </thead>
   <tbody>
-    <tr><td>Sites</td><td>{{ num_sites }}</td></tr>
-    <tr><td>Surveys</td><td>{{ num_surveys }}</td></tr>
-    <tr><td>Samples</td><td>{{ num_samples }}</td></tr>
-    <tr><td>Staff</td><td>{{ num_staff }}</td></tr>
-    <tr><td>Performed</td><td>{{ num_performed }}</td></tr>
-    <tr><td>Plates</td><td>{{ num_plates }}</td></tr>
-    <tr><td>Invalidated</td><td>{{ num_invalidated }}</td></tr>
+    <tr><td><a href="/sites/">Sites</a></td><td>{{ num_sites }}</td></tr>
+    <tr><td><a href="/surveys/">Surveys</a></td><td>{{ num_surveys }}</td></tr>
+    <tr><td><a href="/samples/">Samples</a></td><td>{{ num_samples }}</td></tr>
+    <tr><td><a href="/staff/">Staff</a></td><td>{{ num_staff }}</td></tr>
+    <tr><td><a href="/experiment/">Experiment</a></td><td>{{ num_experiments }}</td></tr>
+    <tr><td><a href="/performed/">Performed</a></td><td>{{ num_performed }}</td></tr>
+    <tr><td><a href="/plate/">Plate</a></td><td>{{ num_plates }}</td></tr>
+    <tr><td><a href="/invalidated/">Invalidated</a></td><td>{{ num_invalidated }}</td></tr>
   </tbody>
 </table>
 {% endblock %}
