--- a/src/server/templates/index.html
+++ b/src/server/templates/index.html
@@ -2,17 +2,17 @@
 {% block content %}
 <table>
   <thead>
-    <tr><th>What</th><th>How Many</th></tr>
+    <tr><th>What</th><th>Count</th><th>JSON</th></tr>
   </thead>
   <tbody>
-    <tr><td><a href="/sites/">Sites</a></td><td>{{ num_sites }}</td></tr>
-    <tr><td><a href="/surveys/">Surveys</a></td><td>{{ num_surveys }}</td></tr>
-    <tr><td><a href="/samples/">Samples</a></td><td>{{ num_samples }}</td></tr>
-    <tr><td><a href="/staff/">Staff</a></td><td>{{ num_staff }}</td></tr>
-    <tr><td><a href="/experiment/">Experiment</a></td><td>{{ num_experiments }}</td></tr>
-    <tr><td><a href="/performed/">Performed</a></td><td>{{ num_performed }}</td></tr>
-    <tr><td><a href="/plate/">Plate</a></td><td>{{ num_plates }}</td></tr>
-    <tr><td><a href="/invalidated/">Invalidated</a></td><td>{{ num_invalidated }}</td></tr>
+    <tr><td><a href="/sites/">Sites</a></td><td>{{ num_sites }}</td><td><a href="/sites/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/surveys/">Surveys</a></td><td>{{ num_surveys }}</td><td><a href="/surveys/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/samples/">Samples</a></td><td>{{ num_samples }}</td><td><a href="/samples/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/staff/">Staff</a></td><td>{{ num_staff }}</td><td><a href="/staff/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/experiment/">Experiment</a></td><td>{{ num_experiments }}</td><td><a href="/experiment/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/performed/">Performed</a></td><td>{{ num_performed }}</td><td><a href="/performed/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/plate/">Plate</a></td><td>{{ num_plates }}</td><td><a href="/plate/?fmt=json">x</a></td></tr>
+    <tr><td><a href="/invalidated/">Invalidated</a></td><td>{{ num_invalidated }}</td><td><a href="/invalidated/?fmt=json">x</a></td></tr>
   </tbody>
 </table>
 {% endblock %}
